--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "moment": "^2.29.4",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.9.7",
+    "pg": "8.7.1",
+    "pg-hstore": "2.3.4",
     "sequelize": "^6.6.2",
     "uuid": "^9.0.1"
   },
