--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,10 +1,13 @@
 {
-  "development": {
-    "username": "root",
-    "password": null,
+  "production": {
+    "username": "river_lee",
+    "password": "Giang19111999",
     "database": "booking_care",
     "host": "127.0.0.1",
-    "dialect": "mysql",
+    "dialect": "postgres",
+    "define": {
+      "freezeTableName": true
+    },
     "logging": false,
     "timezone": "+07:00",
     "query": {
@@ -18,11 +21,14 @@
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
-  "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+  "development": {
+    "username": "postgres",
+    "password": "Giang19111999@",
+    "database": "postgres",
+    "host": "db.mhxcgputksuzrmfzrngx.supabase.co",
+    "dialect": "postgres",
+    "define": {
+      "freezeTableName": true
+    }
   }
 }
